[jboss-additional-testsuite] : Adding some clustering tests for Eap7 and Wildfly servers. Restructuring of code in order to support also specific tests from previous servers that are not supported any more.